# airs-tts

./: Cargo.toml  README.md  SKILL.md
src/: lib.rs  main.rs
src/backends/: mod.rs
src/backends/kokoro/: engine.rs  mod.rs  model.rs  phonemizer.rs  voices.rs
