[package]
name = "airs-tts"
version = "0.1.0"
edition = "2024"

[features]
default = ["kokoro"]
kokoro = ["dep:ort", "dep:log", "dep:ndarray", "dep:serde_json"]

[[bin]]
name = "airs-tts"
path = "src/main.rs"

[dependencies]
airs-audio = { path = "../airs-audio" }
airs-io = { path = "../airs-io" }
async-trait = "0.1"
ort = { version = "=2.0.0-rc.11", optional = true }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
log = { version = "0.4.28", optional = true }
ndarray = { version = "0.17", optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
thiserror = "2"
